# ot-harjoitustyo

./: .coveragerc  .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml  tasks.py
laskarit/viikko3/: tehtava1.md  tehtava2.md  tehtava3.md  tehtava4.md
pacman/: .flake8  pyproject.toml  tasks.py
pacman/src/: constants.py  index.py
pacman/src/menus/: login_menu.py  user.py
pacman/src/menus/screens/: base_screen.py  create_user_screen.py  landing_screen.py  login_screen.py  screen_enums.py
pacman/src/models/: score.py  user.py
pacman/src/repositories/: user_repository.py
pacman/src/tests/: index_test.py
pacman/src/tests/models/: score_test.py  user_test.py
pacman/src/ui/menus/: login_menu.py
pacman/src/ui/menus/screens/: create_user_screen.py  landing_screen.py  login_screen.py
scripts/: init.dev.sql  init.prod.sql  init.test.sql
src/: constants.py  db_connection.py  index.py  init_db.py  main_loop.py  renderer.py  utils.py
src/game/: enums.py  level.py  main_loop.py  utils.py
src/game/menus/: game_over_menu.py  login_menu.py
src/game/sprites/: enemy.py  nugget.py  pac.py  super_nugget.py  wall.py
src/models/: player.py  score.py
src/repositories/: player_repository.py  score_repository.py
src/services/: player_service.py  score_service.py
src/tests/: conftest.py
src/ui/: game_over_menu.py  login_menu.py  main_loop.py  renderer.py
(+20 files in other folders)
