[tool.poetry]
name = "pacman"
version = "0.1.0"
description = ""
authors = ["Juhanir <juhani.riisio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.1"
pygame-menu = "^4.4.3"
invoke = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.6.0"
coverage = "^6.1.2"
pylint = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
